force-app/main/default/objects/Adoption__c/fields/Adopter2__c.field-meta.xml
<CustomField>
    <fullName>Adopter2__c</fullName>
    <label>Adopter2</label>
    <referenceTo>Adopter2__c</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>