force-app/main/default/objects/Adoption__c/fields/Adoption_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Stage__c</fullName>
    <description>Specifies whether the animal is in the process of adoption, has been adopted, or has been returned by the adopter.</description>
    <label>Adoption Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back to Shelter</fullName>
            </value>
            <value>
                <fullName>Adoption Process</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>